# thousandmodels-2026

./: .env.example  .gitignore  README.md
apps/api/: README.md  pyproject.toml
apps/api/app/: audit.py  auth.py  csrf.py  main.py  metrics.py  observability.py  readiness.py  schemas.py  security.py  seed.py  settings.py  store.py  store_paths.py
apps/api/scripts/: deployment_smoke.py  live_qwen_smoke.py  live_qwenpaw_smoke.py  migrate_store.py  release_gate.py  reset_demo_state.py  write_v14_qwenpaw_shadow_evidence.py
apps/api/tests/: conftest.py  test_agent_backend_selection.py  test_api_flow.py  test_planning.py  test_recovery.py  test_review.py  test_v02_agent_trace.py  test_v02_contracts.py  test_v02_incident_recovery.py  test_v02_plan_versioning.py  test_v02_public_projection.py  test_v02_review_metrics.py  test_v02_seed_store.py  test_v04_auth.py  test_v04_authorization.py  test_v08_agent_contracts.py  test_v08_agent_runtime.py  test_v08_planning_agent.py  test_v08_recovery_agent.py  test_v08_review_agent.py  test_v10_agent_evidence_api.py  test_v10_draft_generation.py  test_v10_qwen_draft_runtime.py  test_v11_live_qwen_smoke_script.py  test_v12_event_page_merchant_edge.py  test_v12_qwen_schema_success.py  test_v12_store_models.py  test_v13_demo_reset_script.py  test_v14_qwenpaw_shadow_api.py  test_v14_qwenpaw_shadow_runtime.py  test_v14_tool_registry.py  test_v14_workflow_contract.py  test_v15_live_qwenpaw_smoke_script.py  test_v21_csrf_policy.py  test_v21_demo_boundary.py  test_v21_security_settings.py  test_v21_session_cookie_policy.py  (+21 more)
apps/web/: README.md  (+9 more)
(+318 files in other folders)
